--- a/index.html
+++ b/index.html
@@ -1,9 +1,153 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rinterio</title>
+    <!-- Font CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- DaisyUi and Tailwind CSS CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome CDN -->
+    <script
+      src="https://kit.fontawesome.com/d7017503cf.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <style>
+      .universal-font {
+        font-family: "Manrope", sans-serif;
+      }
+    </style>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+              "our-primary-btn": "#ABEF5F",
+              "our-secondary-btn": "#ABEF5F",
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body></body>
+  <body class="universal-font">
+    <!-- Header -->
+    <header class="sm:mt-4 sm:ml-28 sm:mr-28 sm:mx-auto">
+      <!-- Nav bar -->
+      <nav>
+        <div class="navbar bg-base-100 justify-center gap-80">
+          <div class="navbar-start w-0">
+            <button
+              class="text-2xl bg-white flex gap-2 justify-center items-center font-bold"
+            >
+              <i
+                class="fa-solid fa-arrow-right bg-our-primary-btn w-10 rounded-full py-2 -rotate-45"
+              ></i
+              >Rinterio
+            </button>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+              <li><a>Home</a></li>
+              <li><a>Service</a></li>
+              <li><a>Portfolio</a></li>
+              <li><a>Blogs</a></li>
+              <li><a>Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="flex justify-end gap-1 relative">
+            <i
+              class="btn fa-solid fa-magnifying-glass p-4 bg-white max-sm:hidden"
+            ></i>
+            <i
+              class="btn fa-solid fa-cart-shopping p-4 bg-white max-sm:hidden"
+            ></i>
+            <button
+              class="bg-our-primary-btn font-bold rounded-full px-4 py-3 ml-3 max-sm:hidden"
+            >
+              Book Consult
+              <i
+                class="fa-solid fa-arrow-right bg-black w-8 text-white rounded-full py-2 -rotate-45 ml-1"
+              ></i>
+            </button>
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+              >
+                <li><a>Home</a></li>
+                <li><a>Service</a></li>
+                <li><a>Portfolio</a></li>
+                <li><a>Blogs</a></li>
+                <li><a>Contact Us</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      <!-- Banner section -->
+      <div class="banner mt-12">
+        <!-- img  -->
+        <div>
+          <img class="mx-auto" src="assets/banner.png" alt="" />
+        </div>
+        <!-- banner-description -->
+        <div class="mt-8 text-center">
+          <h1 class="text-7xl font-bold max-sm:text-5xl">
+            A barn house of this design has a <br />
+            striking appearance
+          </h1>
+          <p class="text-gray-500 mt-9">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal <br />
+            accents, and large windows that flood the space with natural light.
+          </p>
+          <button
+            class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60"
+          >
+            View Details
+            <i
+              class="fa-solid fa-arrow-right bg-black w-8 text-white rounded-full py-2 -rotate-45 ml-1"
+            ></i>
+          </button>
+        </div>
+      </div>
+    </header>
+
+    <!-- Main section -->
+    <main></main>
+
+    <!-- Footer section -->
+    <footer></footer>
+  </body>
 </html>
