--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             colors: {
               clifford: "#da373d",
               "our-primary-btn": "#ABEF5F",
-              "our-secondary-btn": "#ABEF5F",
+              "our-space-color": "#F4F4F4",
             },
           },
         },
@@ -45,7 +45,7 @@
   </head>
   <body class="universal-font">
     <!-- Header -->
-    <header class="sm:mt-4 sm:ml-28 sm:mr-28 sm:mx-auto">
+    <header class="sm:mt-4 sm:ml-20">
       <!-- Nav bar -->
       <nav>
         <div class="navbar bg-base-100 justify-center gap-80">
@@ -123,21 +123,23 @@
         </div>
         <!-- banner-description -->
         <div class="mt-8 text-center">
-          <h1 class="text-7xl font-bold max-sm:text-5xl">
+          <h1 class="text-7xl font-bold max-sm:text-4xl max-sm:p-2">
             A barn house of this design has a <br />
             striking appearance
           </h1>
-          <p class="text-gray-500 mt-9">
+          <p
+            class="text-gray-500 mt-9 max-sm:text-m max-sm:p-2 max-sm:font-extrabold"
+          >
             The barn house captivates with its blend of rustic charm and modern
             sophistication, featuring weathered wood, sleek metal <br />
             accents, and large windows that flood the space with natural light.
           </p>
           <button
-            class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60"
+            class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60 max-sm:px-20"
           >
             View Details
             <i
-              class="fa-solid fa-arrow-right bg-black w-8 text-white rounded-full py-2 -rotate-45 ml-1"
+              class="fa-solid fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
             ></i>
           </button>
         </div>
@@ -145,7 +147,218 @@
     </header>
 
     <!-- Main section -->
-    <main></main>
+    <main>
+      <!-- Space section -->
+      <section
+        class="grid grid-cols-2 mt-28 bg-our-space-color max-sm:pt-9 pt-24 pb-24 lg:pl-32 max-sm:pl-5 relative gap-20 max-sm:grid-cols-1 max-sm:pr-4"
+      >
+        <!-- text section -->
+        <div class="max-sm:text-center">
+          <div class="max-sm:hidden">
+            <img
+              class="absolute -ml-28 -mt-16"
+              src="assets/Vector.png"
+              alt=""
+            />
+          </div>
+          <button class="bg-white px-4 py-2 rounded-3xl">
+            <i class="fa-solid fa-arrow-right"></i>
+            About us
+          </button>
+
+          <h1
+            class="font-extrabold text-5xl mt-4 max-sm:text-3xl max-sm:font-extrabold"
+          >
+            We design thoughtful, <br />
+            liveable spaces
+          </h1>
+          <p class="mt-6 text-gray-500">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+          <div class="mt-6 bg-white p-6 flex gap-8 rounded-3xl">
+            <img src="assets/commercial.png" alt="" />
+            <div class="grid">
+              <h4 class="font-bold text-2xl text-left">Commercial</h4>
+              <p class="text-gray-400 text-sm text-left">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+          <div class="mt-6 bg-white p-6 flex gap-8 rounded-3xl">
+            <img src="assets/residential.png" alt="" />
+            <div class="grid">
+              <h4 class="font-bold text-2xl text-left">Residential</h4>
+              <p class="text-gray-400 text-sm text-left">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Img section -->
+        <div>
+          <img src="assets/Rectangle.png" alt="" />
+        </div>
+      </section>
+
+      <!-- Work section -->
+      <section
+        class="bg-our-space-color text-center lg:pl-36 lg:pr-36 lg:pb-24"
+      >
+        <button class="bg-white px-4 py-2 rounded-3xl">
+          <i class="fa-solid fa-arrow-right"></i>
+          How we works
+        </button>
+        <h1
+          class="font-extrabold text-5xl mt-4 max-sm:text-3xl max-sm:font-extrabold"
+        >
+          Our Works Process
+        </h1>
+        <p class="text-gray-500 lg:mt-4">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents.
+        </p>
+        <!-- container section -->
+        <div
+          class="grid grid-cols-4 gap-2 mt-8 max-sm:grid-cols-1 max-sm:p-16 max-sm:pl-18 max-sm:gap-10"
+        >
+          <div class="bg-pink-200 p-6 rounded-2xl max-w-80 h-60 lg:p-10">
+            <!-- img -->
+            <img src="assets/concept.png" alt="" />
+            <h3 class="text-left font-bold text-2xl mt-2">Concept</h3>
+            <p class="text-left max-sm:mt-1 w-52 text-sm mt-3">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+          <div class="bg-yellow-200 p-6 rounded-2xl max-w-80 h-60 lg:p-10">
+            <!-- img -->
+            <img src="assets/flow-chart.png" alt="" />
+            <h3 class="text-left font-bold text-2xl mt-2">Design Process</h3>
+            <p class="text-left max-sm:mt-1 w-52 text-sm mt-3">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+          <div class="bg-green-200 p-6 rounded-2xl max-w-80 h-60 lg:p-10">
+            <!-- img -->
+            <img src="assets/vision.png" alt="" />
+            <h3 class="text-left font-bold text-2xl mt-2">Supervision</h3>
+            <p class="text-left max-sm:mt-1 w-52 text-sm mt-3">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+          <div class="bg-blue-200 p-6 rounded-2xl max-w-80 h-60 lg:p-10">
+            <!-- img -->
+            <img src="assets/budget-planning.png" alt="" />
+            <h3 class="text-left font-bold text-2xl mt-2">Budget Planning</h3>
+            <p class="text-left max-sm:mt-1 w-52 text-sm mt-3">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- latest section -->
+      <section class="text-center lg:mt-24 lg:mb-24">
+        <button
+          class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-40 max-sm:px-20"
+        >
+          <i class="fa-solid fa-arrow-right"></i>
+          Explore our Latest works
+        </button>
+        <h1
+          class="font-extrabold text-5xl mt-4 max-sm:text-3xl max-sm:font-extrabold"
+        >
+          Our Latest Portfolio
+        </h1>
+        <p class="text-gray-500 lg:mt-4">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents.
+        </p>
+        <!-- grid container section -->
+        <div class="lg:pl-44 lg:pr-44 mt-8 max-sm:p-4">
+          <!-- first layer -->
+          <div class="grid lg:grid-cols-3 gap-8">
+            <!-- left side -->
+            <div
+              class="flex text-left p-6 max-sm:p-6 border-2 rounded-3xl lg:col-span-2 lg:max-h-64 max-sm:flex-wrap max-sm:text-left"
+            >
+              <img
+                class="max-sm:w-full max-sm:mb-3"
+                src="assets/img1.png"
+                alt=""
+              />
+              <div class="p-6 max-sm:p-1">
+                <h3 class="text-xl font-extrabold mb-2">Commercial</h3>
+                <p class="text-gray-500">
+                  The barn house captivates with its blend of rustic charm and
+                  modern. The barn house captivates with its blend of rustic
+                  charm and modern .
+                </p>
+                <button class="btn bg-white mt-4">
+                  View Details
+                  <i
+                    class="fa-solid fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
+                  ></i>
+                </button>
+              </div>
+            </div>
+            <div class="p-6 border-2 rounded-3xl col-span- max-h-64">
+              <img class="w-full h-full" src="assets/img2.png" alt="" />
+            </div>
+          </div>
+          <!-- Second layer -->
+          <div>
+            <div class="grid grid-cols-4 gap-8 mt-8 max-sm:grid-cols-1">
+              <div class="p-6 border-2 rounded-3xl col-span- max-h-64">
+                <img class="w-full h-full" src="assets/img3.png" alt="" />
+              </div>
+
+              <div
+                class="flex text-left p-6 border-2 rounded-3xl lg:col-span-2 lg:max-h-64 max-sm:flex-wrap"
+              >
+                <img
+                  class="max-sm:w-full max-sm:mb-3"
+                  src="assets/img4.png"
+                  alt=""
+                />
+                <div class="p-6 max-sm:p-0 max-sm:mt-2 max-sm:text-left">
+                  <h3 class="text-xl font-extrabold mb-2">Commercial</h3>
+                  <p class="text-gray-500">
+                    The barn house captivates with its blend of rustic charm and
+                    modern. The barn house captivates with its blend of rustic
+                    charm and modern .
+                  </p>
+                  <button class="btn bg-white mt-4">
+                    View Details
+                    <i
+                      class="fa-solid fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
+                    ></i>
+                  </button>
+                  <!-- <button
+                    class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60 max-sm:px-20"
+                  >
+                    View Details
+                    <i
+                      class="fa-solid fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
+                    ></i>
+                  </button> -->
+                </div>
+              </div>
+              <div class="p-6 border-2 rounded-3xl col-span- max-h-64">
+                <img class="w-full h-full" src="assets/img5.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <!-- Footer section -->
     <footer></footer>
