--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
               clifford: "#da373d",
               "our-primary-btn": "#ABEF5F",
               "our-space-color": "#F4F4F4",
+              "our-footer-color": "#1C1C1C",
+            },
+            backgroundImage: {
+              "project-img": "url('/assets/bg.jpg')",
+              "footer-texture": "url('/img/footer-texture.png')",
             },
           },
         },
@@ -358,9 +363,106 @@
           </div>
         </div>
       </section>
+
+      <!-- Project section -->
+      <section
+        class="bg-project-img bg-no-repeat bg-cover text-center lg:py-24 lg:px-28"
+      >
+        <button
+          class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-4 bg-opacity-40 max-sm:px-20"
+        >
+          <i class="fa-solid fa-arrow-right"></i>
+          Explore our Latest works
+        </button>
+        <h1
+          class="font-extrabold text-5xl mt-6 max-sm:text-3xl max-sm:font-extrabold"
+        >
+          Let’s Discuss Next Project
+        </h1>
+        <p class="mt-5">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents.
+        </p>
+
+        <!-- Input field -->
+        <div
+          class="flex gap-10 justify-center items-center mt-10 max-sm:flex-wrap"
+        >
+          <input
+            type="text"
+            placeholder="First Name*"
+            class="input input-bordered w-full max-w-xs rounded-full text-sm"
+          />
+          <input
+            type="text"
+            placeholder="Last Name*"
+            class="input input-bordered w-full max-w-xs rounded-full text-sm"
+          />
+        </div>
+        <div
+          class="flex gap-10 mt-3 max-sm:mt-8 justify-center items-center max-sm:flex-wrap"
+        >
+          <input
+            type="text"
+            placeholder="Phone Number*"
+            class="input input-bordered w-full max-w-xs rounded-full text-sm"
+          />
+          <input
+            type="email"
+            placeholder="Email Number*"
+            class="input input-bordered w-full max-w-xs rounded-full text-sm"
+          />
+        </div>
+        <div>
+          <textarea
+            class="textarea textarea-bordered rounded-2xl mt-3 w-2/5 h-52 max-sm:w-80 max-sm:mt-8"
+            placeholder="Write your message here*"
+          ></textarea>
+        </div>
+        <button
+          class="bg-our-primary-btn font-bold rounded-full lg:w-2/5 px-4 py-3 ml-3 mt-5 max-sm:w-80"
+        >
+          Sent Mail
+          <i
+            class="fa-solid fa-arrow-right bg-black w-8 text-white rounded-full py-2 -rotate-45 ml-1"
+          ></i>
+        </button>
+      </section>
     </main>
 
     <!-- Footer section -->
-    <footer></footer>
+    <footer class="bg-our-footer-color text-center lg:py-28">
+      <div class="text-center flex justify-center items-center mx-auto pb-4">
+        <button
+          class="text-2xl bg-our-footer-color flex gap-2 justify-center items-center font-bold"
+        >
+          <i
+            class="fa-solid fa-arrow-right bg-our-primary-btn w-10 rounded-full py-2 -rotate-45"
+          ></i
+          ><span class="text-white">Rinterio</span>
+        </button>
+      </div>
+      <p class="text-gray-400">
+        The barn house captivates with its blend of rustic charm and modern
+        sophistication, featuring weathered wood, sleek metal accents.
+      </p>
+      <div class="navbar-center lg:flex flex justify-center items-center">
+        <ul class="menu menu-horizontal px-1 lg: pt-12">
+          <li class="text-white"><a>Home</a></li>
+          <li class="text-white"><a>Service</a></li>
+          <li class="text-white"><a>Portfolio</a></li>
+          <li class="text-white"><a>Blogs</a></li>
+          <li class="text-white"><a>Contact Us</a></li>
+        </ul>
+      </div>
+      <button
+        class="bg-our-primary-btn font-bold rounded-full px-4 py-3 ml-3 max-sm:hidden mt-5"
+      >
+        Book Consult
+        <i
+          class="fa-solid fa-arrow-right bg-black w-8 text-white rounded-full py-2 -rotate-45 ml-1"
+        ></i>
+      </button>
+    </footer>
   </body>
 </html>
