--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </p>
         <!-- container section -->
         <div
-          class="grid grid-cols-4 gap-2 mt-8 max-sm:grid-cols-1 max-sm:p-16 max-sm:pl-18 max-sm:gap-10"
+          class="grid grid-cols-4 gap-2 mt-8 max-sm:grid-cols-1 max-sm:p-16 max-sm:pl-20 max-sm:gap-10"
         >
           <div class="bg-pink-200 p-6 rounded-2xl max-w-80 h-60 lg:p-10">
             <!-- img -->
@@ -364,9 +364,149 @@
         </div>
       </section>
 
+      <!-- Service section Challenge section-->
+      <section class="text-center lg:p-32 lg:pt-12 max-sm:pl-8">
+        <h1
+          class="font-extrabold text-5xl mt-4 max-sm:text-3xl max-sm:font-extrabold text-center mb-5"
+        >
+          Our <span class="text-green-500">Service</span>
+        </h1>
+        <p class="text-gray-500 mb-14">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents.
+        </p>
+        <!-- box container -->
+        <div class="">
+          <div
+            class="grid lg:grid-cols-3 lg:gap-x-0 max-sm:pl-10 max-sm:pb-16 gap-16 lg:pl-32"
+          >
+            <div class="card bg-base-100 w-5/6 border-2">
+              <div class="card-body">
+                <img class="max-h-52" src="assets/C1.png" alt="" />
+                <h2 class="card-title">Architectural Design</h2>
+                <p class="text-left pt-2">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <div class="card-actions justify-start">
+                  <button
+                    class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60 max-sm:px-20"
+                  >
+                    View Details
+                    <i
+                      class="fa-solid max-sm:hidden fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-base-100 w-5/6 border-2">
+              <div class="card-body">
+                <img class="max-h-52" src="assets/C2.png" alt="" />
+                <h2 class="card-title">Architectural Design</h2>
+                <p class="text-left pt-2">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <div class="card-actions justify-start">
+                  <button
+                    class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60 max-sm:px-20"
+                  >
+                    View Details
+                    <i
+                      class="fa-solid max-sm:hidden fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-base-100 w-5/6 border-2">
+              <div class="card-body">
+                <img src="assets/C3.png" alt="" />
+                <h2 class="card-title">Architectural Design</h2>
+                <p class="text-left pt-2">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <div class="card-actions justify-start">
+                  <button
+                    class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60 max-sm:px-20"
+                  >
+                    View Details
+                    <i
+                      class="fa-solid max-sm:hidden fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-base-100 w-5/6 border-2">
+              <div class="card-body">
+                <img src="assets/C4.png" alt="" />
+                <h2 class="card-title">Architectural Design</h2>
+                <p class="text-left pt-2">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <div class="card-actions justify-start">
+                  <button
+                    class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60 max-sm:px-20"
+                  >
+                    View Details
+                    <i
+                      class="fa-solid max-sm:hidden fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-base-100 w-5/6 border-2">
+              <div class="card-body">
+                <img class="max-h-52" src="assets/C5.png" alt="" />
+                <h2 class="card-title">Architectural Design</h2>
+                <p class="text-left pt-2">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <div class="card-actions justify-start">
+                  <button
+                    class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60 max-sm:px-20"
+                  >
+                    View Details
+                    <i
+                      class="fa-solid max-sm:hidden fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-base-100 w-5/6 border-2">
+              <div class="card-body">
+                <img class="max-h-52" src="assets/C6.png" alt="" />
+                <h2 class="card-title">Architectural Design</h2>
+                <p class="text-left pt-2">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <div class="card-actions justify-start">
+                  <button
+                    class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-5 bg-opacity-60 max-sm:px-20"
+                  >
+                    View Details
+                    <i
+                      class="fa-solid max-sm:hidden fa-arrow-right bg-our-primary-btn w-8 text-black rounded-full py-2 -rotate-45 ml-1"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Project section -->
       <section
-        class="bg-project-img bg-no-repeat bg-cover text-center lg:py-24 lg:px-28"
+        class="bg-project-img bg-no-repeat bg-cover text-center lg:py-24 lg:px-28 max-sm:pb-5"
       >
         <button
           class="bg-our-primary-btn font-bold rounded-full px-5 py-3 ml-3 mt-4 bg-opacity-40 max-sm:px-20"
@@ -431,7 +571,9 @@
     </main>
 
     <!-- Footer section -->
-    <footer class="bg-our-footer-color text-center lg:py-28">
+    <footer
+      class="bg-our-footer-color text-center lg:py-28 max-sm:px-16 max-sm:py-8"
+    >
       <div class="text-center flex justify-center items-center mx-auto pb-4">
         <button
           class="text-2xl bg-our-footer-color flex gap-2 justify-center items-center font-bold"
@@ -444,10 +586,13 @@
       </div>
       <p class="text-gray-400">
         The barn house captivates with its blend of rustic charm and modern
-        sophistication, featuring weathered wood, sleek metal accents.
+        sophistication,<br />
+        featuring weathered wood, sleek metal accents.
       </p>
       <div class="navbar-center lg:flex flex justify-center items-center">
-        <ul class="menu menu-horizontal px-1 lg: pt-12">
+        <ul
+          class="menu menu-horizontal px-1 lg: pt-12 max-sm:flex-col max-sm:items-center"
+        >
           <li class="text-white"><a>Home</a></li>
           <li class="text-white"><a>Service</a></li>
           <li class="text-white"><a>Portfolio</a></li>
@@ -456,7 +601,7 @@
         </ul>
       </div>
       <button
-        class="bg-our-primary-btn font-bold rounded-full px-4 py-3 ml-3 max-sm:hidden mt-5"
+        class="bg-our-primary-btn font-bold rounded-full px-4 py-3 ml-3 mt-5"
       >
         Book Consult
         <i
